[tool.poetry]
name = "async-pytest"
version = "0.1.0"
description = ""
authors = ["Konyukhov Alexander <jesusmisha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"

[tool.poetry.group.validation.dependencies]
pydantic = "^2.7.1"

[tool.poetry.group.formatting.dependencies]
isort = "^5.13.2"

[tool.poetry.group.type-checking.dependencies]
mypy = "^1.10.0"

[tool.poetry.group.linting.dependencies]
pylint = "^3.1.0"

[tool.poetry.group.report-generation.dependencies]
allure-pytest = "^2.13.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
